[tool.poetry]
name = "joby"
version = "0.0.1"
description = ""
authors = ["flapili <contact.flapili@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.79.0"}
sqlmodel = "^0.0.6"
typer = {extras = ["all"], version = "^0.6.1"}
loguru = "^0.6.0"
asyncpg = "^0.26.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
joby = 'joby.__main__:app'